--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
     "@types/jest": "^28.1.1",
     "eslint": "^8.17.0",
-    "jest": "^28.1.0"
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.1"
   },
   "scripts": {
     "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
